[package]
name = "astra-emu-translation-openai-compatible"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
futures-util.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
keyring.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
