[package]
name = "na_mpeg2_decoder"
version = "0.1.0"
edition = "2021"
autobins = false
description = "Rust MPEG-1/2 video decoder"

[lib]
name = "na_mpeg2_decoder"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
log = "0.4"
byteorder = "1"

# Audio decode is delegated to Symphonia (MP1/2/3). Optional: only compiled
# when the "audio" feature is enabled. Excluded from UEFI video-only builds.
symphonia = { version = "0.5.5", features = ["mpa"], optional = true }

env_logger = { version = "0.11", optional = true }
png = { version = "0.17", optional = true }

[features]
default = ["audio"]

# Audio decoding via Symphonia (MP1/2/3). Enabled by default for desktop.
audio = ["dep:symphonia"]

# Marker feature: video decode only, no audio, no symphonia dependency.
# Used by UEFI builds via rfvp's uefi-native-video feature.
video-only = []

desktop-bins = [
  "audio",
  "dep:env_logger",
  "dep:png",
]

[[example]]
name = "png_dump"
path = "examples/png_dump.rs"
required-features = ["desktop-bins"]
