[package]
name = "wmv-decoder"
version = "0.2.0"
edition = "2021"
autobins = false

[lib]
name = "wmv_decoder"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
log = "0.4"

anyhow = { version = "1.0", optional = true }
env_logger = { version = "0.10", optional = true }
png = { version = "0.17", optional = true }

[features]
default = ["audio"]

# WMA audio decoding. Enabled by default for desktop builds.
# Excluded from UEFI video-only builds.
audio = []

# Marker feature: video decode only, no WMA audio decoder compiled.
# Used by UEFI builds via rfvp's uefi-native-video feature.
video-only = []

desktop-bins = [
  "audio",
  "dep:anyhow",
  "dep:env_logger",
  "dep:png",
]

[[bin]]
name = "wmv-decoder"
path = "src/bin/wmv_decoder_cli.rs"
required-features = ["desktop-bins"]
