[package]
name = "astra-emu-family-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
abi_stable.workspace = true
astra-core = { path = "../../../../Engine/Source/Runtime/astra-core" }
astra-byte-source = { path = "../../../../Engine/Source/Runtime/astra-byte-source" }
postcard.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
