[package]
name = "astra-emu-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "astra-emu-schema"
path = "src/main.rs"

[dependencies]
astra-emu-cli = { path = "../astra-emu-cli" }
astra-emu-family-api = { path = "../../FamilyApi/astra-emu-family-api" }
astra-emu-manager-core = { path = "../../Manager/astra-emu-manager-core" }
astra-emu-translation-openai-compatible = { path = "../../Providers/astra-emu-translation-openai-compatible" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
